added model for sessions and tested displaying database information in ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,13 @@
+<% include ./partials/header %>
+
+<% foundSessions.forEach(function(session){ %>
+  <div>
+    <p><%= session.course %></p>
+  </div>
+<% }) %>
+
 <h1>test</h1>
+
+<button>
+
+<% include ./partials/footer %>
