changed duration input to minutes

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -5,7 +5,7 @@
   Course:<br>
     <input type="text" name="course" value="ECE 115">
     <br>
-    Duration (h):<br>
+    Duration (m):<br>
     <input type="number" name="duration" value="2">
     <br><br>
     <input type="submit" value="Submit">
