working on landing page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,12 @@
 <% include ./partials/header %>
+<% include ./partials/navbar %>
+
+</div> <!-- backdrop -->
 
 <% foundSessions.forEach(function(session){ %>
   <div>
     <p><%= session.course %></p>
   </div>
 <% }) %>
-
-<h1>test</h1>
 
 <% include ./partials/footer %>
