--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,5 +4,7 @@
     <meta charset="utf-8">
     <title>UWStudy</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
   </head>
   <body>
