--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,32 @@
 <% include ./partials/header %>
 <% include ./partials/navbar %>
 
-</div> <!-- backdrop -->
+<a href="#">
+  <i class="fa fa-angle-double-down" 
+    style="font-size: 48px; color: white; position: absolute; top: 90vh; left: 50vw; text-shadow: 0px 2px 4px #999999" ></i>
+</a>
 
-<% foundSessions.forEach(function(session){ %>
-  <div>
-    <p><%= session.course %></p>
+</div> <!-- backdrop -->
+<div class="content">
+  <div class="info-panel">
+    <div class="container">
+      
+    </div>
   </div>
-<% }) %>
+  <div class="info-panel">
+    <div class="container">
+      
+    </div>
+  </div>
+  <div class="info-panel">
+    <div class="container">
+      
+    </div>
+  </div>
+</div>
+
+
+
+
 
 <% include ./partials/footer %>
