--- a/views/create.ejs
+++ b/views/create.ejs
@@ -10,7 +10,7 @@
       <input type="text" class="form-control" placeholder="ECE 105" name="course">
     </div>
     <div class="form-group">
-        <label for="Duration">Duration (hours):</label>
+        <label for="Duration">Duration (minutes):</label>
       <input type="number" class="form-control" placeholder="2" name="duration">
     </div>
     <div class="form-group">
