rearranged some files, created login page and route

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,9 @@
 <% include ./partials/header %>
+  <link rel="stylesheet" href="stylesheets/landing.css">
+  
+  </head>
+  <body>
+    
 <% include ./partials/navbar %>
 
 <a href="#">
@@ -24,9 +29,5 @@
     </div>
   </div>
 </div>
-
-
-
-
 
 <% include ./partials/footer %>
