--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -30,7 +30,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right" id="auth-btns">
-        <li><a href="#" id="log">Log In</a></li>
+        <li><a href="/login" id="log">Log In</a></li>
         <li><a href="#" id="sign">Sign Up</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
