--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -4,7 +4,9 @@
   <body>
 
 <div class="logo">
-    <h2>UWStudy</h2>
+    <a href="/">
+        <img src="/img/logosmall.png">
+    </a>
 </div>
 
 <div class="container login-form">
