--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -15,6 +15,11 @@ Product Card Styles
     padding: 15px;
 }
 
+#contact{
+  margin-left:0;
+  padding-left:0;
+}
+
 .panelBottom {
     border-top: 1px solid #e7e7e7;
     padding-top: 15px;
