--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -25,6 +25,7 @@ input:focus {
     background-color: white;
     max-width: 420px;
     border-radius: 7px;
+    box-shadow: 0px 2px 10px rgba(50,50,50,0.6);
 }
 
 .form-cont {
@@ -43,14 +44,17 @@ input:focus {
 }
 
 .logo {
-    padding-top: 100px;
     text-align: center;
-    height: 210px;
-    width: 100vw;
+    height: 300px;
 }
 
 .logo img {
-    transform: scale(0.2, 0.2)
+    transform: scale(0.25, 0.25)
+}
+
+.logo a {
+    display: inline-block;
+    height: 0px;
 }
 
 .btn-success {
