--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -19,12 +19,12 @@ input:focus {
     height: 40px;
 }
 
-.container {
+.frm {
     padding: 0;
-    margin: auto auto;
     background-color: white;
     max-width: 420px;
     border-radius: 7px;
+    margin-top: 30px;
     box-shadow: 0px 2px 10px rgba(50,50,50,0.6);
 }
 
@@ -43,18 +43,17 @@ input:focus {
     border-radius: 7px;
 }
 
-.logo {
-    text-align: center;
-    height: 300px;
-}
-
-.logo img {
-    transform: scale(0.25, 0.25)
-}
-
 .logo a {
-    display: inline-block;
-    height: 0px;
+    
+}
+
+img {
+    margin-top: 8vh;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 85px;
+    width: auto;
 }
 
 .btn-success {
