updated show view: added progress bars and grid

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -18,7 +18,7 @@
             <div class="form-cont">
                 <h3>Log in to your account</h3>
                 <hr>
-                <form>
+                <form action="/login" method="POST">
                   <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
