--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -20,12 +20,12 @@
                 <hr>
                 <form action="/login" method="POST">
                   <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                    <label for="exampleInputEmail1">Username</label>
+                    <input type="text" class="form-control" id="username" placeholder="username" name="username">
                   </div>
                   <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" class="form-control" id="password" placeholder="password" name="password">
                   </div>
                   <button type="submit" class="btn btn-block btn-success">Submit</button>
                 </form>
