changed styles of show page

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,6 @@
 <% include ./partials/header %>
   <link rel="stylesheet" href="stylesheets/landing.css">
+  <link rel="stylesheet" href="stylesheets/navbar.css">
   
   </head>
   <body>
