--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -62,6 +62,11 @@ span.var {
     margin-bottom: 0px;
 }
 
+.well {
+    display: inline-block;
+    padding-top: 35px !important;
+}
+
 
 
 /*progress bars*/
